# fasthx-admin

./: .gitignore  README.md  pyproject.toml
examples/demo/: app.py  models.py
src/fasthx_admin/: __init__.py  ai_chat.py  auth.py  crud.py  database.py
src/fasthx_admin/static/css/: ai-chat.css  style.css
src/fasthx_admin/static/js/: ai-chat.js  app.js
src/fasthx_admin/templates/: ai_context_settings.html  ai_settings.html  base.html  dashboard.html  detail.html  form.html  list.html  login.html  wizard.html
src/fasthx_admin/templates/partials/: _ai_chat_widget.html  _form_field.html  _wizard_indicators.html  dropdown_options.html  dropdown_options_multi.html  progress_bar.html  row_actions.html  status_cell.html  table_body.html  wizard_step.html
