[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasthx-admin"
version = "0.2.4"
description = "FastAPI + HTMX + Jinja2 admin interface framework — a modern replacement for Flask-Admin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "talbiston" },
]
keywords = ["fastapi", "htmx", "admin", "crud", "jinja2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastapi",
    "sqlalchemy",
    "jinja2",
    "python-multipart",
    "requests",
    "itsdangerous",
]

[project.optional-dependencies]
ai = [
    "httpx",
]
dev = [
    "uvicorn[standard]",
    "pytest",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/talbiston/fasthx-admin"
Repository = "https://github.com/talbiston/fasthx-admin"

[tool.hatch.build.targets.wheel]
packages = ["src/fasthx_admin"]
